<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg_joint_position_control</name>
  <version>1.0.0</version>
  <description>Package to control an OnRobot RG gripper with Joint Position Controller</description>
  <maintainer email="tonyle98@outlook.com">Tony Le</maintainer>
  <author email="khoanguyendacdang2198@gmail.com">Khoa Nguyen</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>onrobot_rg_control</depend>
</package>